8369111: G1: Determining concurrent start uses inconsistent predicates

Reviewed-by: iwalulya, ayang